--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                     <div id="2" class="page py-5">
                         <h1>Perfil</h1>
-                        <img class="rounded-circle" src="https://avatars.githubusercontent.com/u/32580254" alt="">
+                        <img class="rounded-circle" src="https://avatars.githubusercontent.com/u/32580254" width="100%" alt="">
                         <hr>
                         <h5>DADOS</h5>
                         <p><strong>Nome:</strong> Wesley Benício</p>
