--- a/index.html
+++ b/index.html
@@ -10,215 +10,18 @@
     <link rel="stylesheet" href="assets/css/custom.css">
 </head>
 
-<body class="container ">
+<body class="container-fluid ">
+    <div id="root"></div>
 
-    <section class="h-auto">
-        <div class='smartphone'>
-
-            <div class="p-3 pt-5 screen m-auto">
-                <div class="bg-light m-0 px-3" style='height:20px; width:99%;border-radius: 15px 15px 0 0;'>
-                    <div class="row">
-                        <div class="col d-flex ">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-alarm" viewBox="0 0 16 16">
-                                <path d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5z"/>
-                                <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z"/>
-                              </svg>
-                        </div>
-                        <div id="time" class="col text-center ">
-                            00:00
-                        </div>
-                        <div class="col d-flex justify-content-end">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-broadcast-pin" viewBox="0 0 16 16">
-                                <path d="M3.05 3.05a7 7 0 0 0 0 9.9.5.5 0 0 1-.707.707 8 8 0 0 1 0-11.314.5.5 0 0 1 .707.707zm2.122 2.122a4 4 0 0 0 0 5.656.5.5 0 1 1-.708.708 5 5 0 0 1 0-7.072.5.5 0 0 1 .708.708zm5.656-.708a.5.5 0 0 1 .708 0 5 5 0 0 1 0 7.072.5.5 0 1 1-.708-.708 4 4 0 0 0 0-5.656.5.5 0 0 1 0-.708zm2.122-2.12a.5.5 0 0 1 .707 0 8 8 0 0 1 0 11.313.5.5 0 0 1-.707-.707 7 7 0 0 0 0-9.9.5.5 0 0 1 0-.707zM6 8a2 2 0 1 1 2.5 1.937V15.5a.5.5 0 0 1-1 0V9.937A2 2 0 0 1 6 8z"/>
-                              </svg>
-
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wifi-1" viewBox="0 0 16 16">
-                                <path d="M11.046 10.454c.226-.226.185-.605-.1-.75A6.473 6.473 0 0 0 8 9c-1.06 0-2.062.254-2.946.704-.285.145-.326.524-.1.75l.015.015c.16.16.407.19.611.09A5.478 5.478 0 0 1 8 10c.868 0 1.69.201 2.42.56.203.1.45.07.611-.091l.015-.015zM9.06 12.44c.196-.196.198-.52-.04-.66A1.99 1.99 0 0 0 8 11.5a1.99 1.99 0 0 0-1.02.28c-.238.14-.236.464-.04.66l.706.706a.5.5 0 0 0 .707 0l.708-.707z"/>
-                              </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-battery-half" viewBox="0 0 16 16">
-                                <path d="M2 6h5v4H2V6z"/>
-                                <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h10zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8z"/>
-                              </svg>
-                        </div>
-
-                    </div>
-
-                </div>
-                <div class="conteudo pt-1 mt-0 h-100 text-light text-center" style="border-radius: 0 0 15px 15px;">
-
-
-                    <div id="1" class="page py-5 ">
-                        <h1 class="my-1">MENU</h1>
-                        <a href="#?page=2" class="btn btn-light my-1" style="width:90%;">
-                            <h3>Perfil</h3>
-                        </a>
-                        <a href="#?page=3 " class="btn btn-light my-1" style="width:90%;">
-
-                            <h3>Stacks</h3>
-
-                        </a>
-                        <a href="#?page=4 " class="btn btn-light my-1" style="width:90%;">
-
-                            <h3>Experiências</h3>
-
-                        </a>
-                        <a href="#?page=5 " class="btn btn-light my-1" style="width:90%;">
-
-                            <h3>Acadêmico</h3>
-
-                        </a>
-                        <div>
-                            :)
-                        </div>
-                    </div>
-
-                    <div id="2" class="page py-5">
-                        <h1>Perfil</h1>
-                        <img class="rounded-circle" src="https://avatars.githubusercontent.com/u/32580254" width="100%" alt="">
-                        <hr>
-                        <h5>DADOS</h5>
-                        <p><strong>Nome:</strong> Wesley Benício</p>
-                        <p><strong>Github:</strong> Wesbdss</p>
-                        <p><strong>Idade: </strong><span id="idade"></span> </p>
-                        <p><strong>Email: </strong>wesleybenicio4@gmail.com</p>
-                        <p><strong>Esporte: </strong>Basquete</p>
-                        <a href="#?page=1 " class="btn btn-light my-1" style="width:90%;">
-                            <h3>Voltar</h3>
-                        </a>
-
-                    </div>
-                    <div id="3" class="page py-5">
-                        <h1>Stacks</h1>
-                        <div>
-                            <canvas id="myChart"></canvas>
-
-                        </div>
-                        <a href="#?page=1" class="btn btn-light my-1" style="width:90%;">
-
-                            <h3>Voltar</h3>
-                        </a>
-
-                    </div>
-                    <div id="4" class="page py-5">
-                        <h1>Experiências</h1>
-                        <table class="table table-hover table-light ">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Empresa</th>
-                                    <th scope="col">Tempo</th>
-                                    <th scope="col">Cargo</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">0</th>
-                                    <td>Hackathons</td>
-                                    <td>4 Vit.</td>
-                                    <td>Líder/Dev</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>UFG</td>
-                                    <td>Estágio</td>
-                                    <td>Monitor</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>Lucas Tecnologia</td>
-                                    <td>1 mês</td>
-                                    <td>Frontend (C#/Razor)</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>Computroni</td>
-                                    <td>~2 anos</td>
-                                    <td>Leader/FullStack (Javascript)</td>
-                                </tr>
-
-                                <tr>
-                                    <th scope="row">4</th>
-                                    <td>NEOSILOS</td>
-                                    <td>~1 anos</td>
-                                    <td>FullStack (Python)</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">5</th>
-                                    <td>Salutho</td>
-                                    <td>3 meses</td>
-                                    <td>Backend (Python)</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">6</th>
-                                    <td>...</td>
-                                    <td>...</td>
-                                    <td>...</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <a href="#?page=1 " class="btn btn-light my-1" style="width:90%;">
-                            <h3>Voltar</h3>
-                        </a>
-
-                    </div>
-                    <div id="5" class="page py-5">
-                        <h1>Acadêmicos</h1>
-                        <table class="table table-hover table-light ">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Instituição</th>
-                                    <th scope="col">Curso</th>
-                                    <th scope="col">Fim</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>SoftBlue</td>
-                                    <td>Lógica de Programação</td>
-                                    <td>Concluído</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>UFG</td>
-                                    <td>Ciências da Computação</td>
-                                    <td>2022/1</td>
-                                </tr>
-
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>Alura</td>
-                                    <td>Jenkins</td>
-                                    <td>Concluído</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">4</th>
-                                    <td>Balta.io</td>
-                                    <td>C# MVC</td>
-                                    <td>Concluído</td>
-                                </tr>
-
-
-                            </tbody>
-                        </table>
-                        <a href="#?page=1" class="btn btn-light my-1" style="width:90%;">
-                            <h3>Voltar</h3>
-                        </a>
-
-                    </div>
-                </div>
-
-            </div>
-            <!-- <img src="/assets/img/smartphone.png " alt=" "> -->
-
-        </div>
-
-    </section>
     <script type="text/javascript" src="assets/js/chart.js"></script>
     <script src="assets/js/jquery-3.6.0.min.js "></script>
     <script src="assets/js/bootstrap.bundle.min.js "></script>
     <script src="assets/js/bootstrap.min.js "></script>
+    <script src="http://okup5z621.bkt.clouddn.com/atg.min.js"></script>
+    <script>
+        var atg = window.ascii_text_generator;
+    </script>
+    <script type="text/javascript" src="assets/docs/data.js"></script>
     <script src="assets/js/custom.js "></script>
 </body>
 
